# hyperion

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  conanfile.txt
cfg/: hyperion.toml
scripts/: install.py
src/cli/: CMakeLists.txt  Command.cpp  Command.hh  HCLI.cpp  HCLI.hh  main.cpp
src/cli/cmd/: DaemonCommand.cpp  DaemonCommand.hh  JobCommand.cpp  JobCommand.hh  WorkspaceCommand.cpp  WorkspaceCommand.hh
src/cli/daemon/: DaemonClient.cpp  DaemonClient.hh  DaemonProcess.cpp  DaemonProcess.hh
src/daemon/: CMakeLists.txt  Daemon.cpp  Daemon.hh  PidFile.cpp  PidFile.hh  Preflight.cpp  Preflight.hh  main.cpp
src/daemon/adapters/: DiskWorkspaceRepo.cpp  DiskWorkspaceRepo.hh
src/daemon/api/: ApiServer.cpp  ApiServer.hh  Controller.cpp  Controller.hh  Dispatcher.cpp  Dispatcher.hh  Server.cpp  Server.hh
src/daemon/api/controllers/: KernelController.cpp  KernelController.hh  WorkspaceController.cpp  WorkspaceController.hh
src/daemon/compute/: KernelManager.cpp  KernelManager.hh  KernelSource.hh  KernelSourceRepo.hh
src/daemon/orchestrator/: ApiController.cpp  ApiController.hh  WorkspaceRepo.hh
src/daemon/workspace/: DiskWorkspaceRepo.hh  WorkspaceManager.cpp  WorkspaceManager.hh  WorkspaceRepo.hh
src/internal/: CMakeLists.txt  Platform.cpp  Platform.hh
src/internal/api/: Message.hh  MessageDeserializer.cpp  MessageDeserializer.hh  Session.cpp  Session.hh
src/internal/api/cmd/: Ack.hh  Error.hh  Health.cpp  Health.hh  Job.cpp  Job.hh  Kernel.cpp  Kernel.hh  Workspace.hh
src/internal/core/: Concepts.hh  Config.cpp  Config.hh  Core.hh  Error.cpp  Error.hh  FileSystem.cpp  FileSystem.hh  Functional.hh  Json.cpp  Log.cpp  Log.hh  OS.cpp  OS.hh  Pool.hh  Profiler.cpp  Scope.hh  Scoped.hh  Singleton.hh  String.cpp  String.hh  Time.hh
src/internal/messaging/: Message.hh  MessageDeserializer.hh  Payload.cpp  Payload.hh
src/internal/models/: Compute.hh  Job.hh  Workspace.hh
src/internal/net/: Addr.hh  TcpServer.cpp  TcpServer.hh  TcpSession.cpp  TcpSession.hh
src/internal/runtime/: Process.cpp  Process.hh  Signal.cpp  Signal.hh  Thread.cpp  Thread.hh
src/internal/runtime/unix/: UnixProcess.cpp  UnixProcess.hh  UnixSignal.cpp  UnixSignal.hh
src/ksl/: Ast.hh  CMakeLists.txt  CxxEmitter.cpp  CxxEmitter.hh  Lexer.cpp  Lexer.hh  OpenCLEmitter.cpp  OpenCLEmitter.hh  Parser.cpp  Parser.hh  Token.hh  Transpiler.cpp  Transpiler.hh
src/lib/: CMakeLists.txt  Platform.cpp  Platform.hh
src/lib/api/: ApiMessage.hh  ApiMessageDeserializer.cpp  ApiMessageDeserializer.hh  Message.hh  MessageDeserializer.cpp  MessageDeserializer.hh  Session.hh
src/lib/api/cmd/: Ack.cpp  Ack.hh  Error.cpp  Error.hh  Health.cpp  Health.hh  Job.cpp  Job.hh  Workspace.cpp  Workspace.hh
src/lib/asio/: Asio.cpp  Asio.hh
src/lib/core/: Concepts.hh  Config.cpp  Config.hh  Core.cpp  Core.hh  Enum.hh  Env.hh  Error.cpp  Error.hh  FileSystem.cpp  FileSystem.hh  FlatMap.hh  Functional.hh  Log.cpp  Log.hh  Pool.hh  Profiler.cpp  Profiler.hh  RTTI.hh  Random.cpp  Random.hh  Scope.hh  Scoped.hh  ServiceLocator.hh  Singleton.hh  String.cpp  String.hh  Time.hh
src/lib/messaging/: Message.hh  MessageDeserializer.hh  Payload.cpp  Payload.hh
src/lib/models/: Job.hh
src/lib/net/: Addr.cpp  Addr.hh  Session.cpp  Session.hh  TcpServer.hh  TcpSession.cpp  TcpSession.hh
src/lib/orchestrator/: Workspace.hh
src/lib/runtime/: Process.cpp  Process.hh  Signal.cpp  Signal.hh  Thread.cpp  Thread.hh
src/lib/runtime/unix/: UnixProcess.cpp  UnixProcess.hh  UnixSignal.cpp  UnixSignal.hh
tests/: CMakeLists.txt
tests-integration/: env.sh  requirements.txt  run.sh  test_deamon.py  test_install.py
tests-integration/internal/: __init__.py  base.py  cfg.py  utils.py
tests-integration/res/: test_config.toml
tests-unit/: CMakeLists.txt
tests-unit/daemon/: CMakeLists.txt
tests-unit/internal/: Test_Api_Cmd.cpp  Test_Core_Enum.cpp  Test_Core_FlatMap.cpp  Test_Core_Scoped.cpp  Test_Core_Types.cpp  Test_Messaging_Payload.cpp
tests-unit/ksl/: CMakeLists.txt  Test_Ksl_CxxEmitter.cpp  Test_Ksl_Lexer.cpp  Test_Ksl_Parser.cpp  Test_Ksl_Transpiler.cpp
tests/internal/: Test_Api_Cmd.cpp  Test_Core_Error.cpp  Test_Core_Functional.cpp  Test_Core_String.cpp
tests/ksl/: Test_Ksl_OpenCLEmitter.cpp
tests/lib/: CMakeLists.txt  Test_Api_Cmd.cpp  Test_Core_Enum.cpp  Test_Core_Error.cpp  Test_Core_FlatMap.cpp  Test_Core_Functional.cpp  Test_Core_Scoped.cpp  Test_Core_String.cpp  Test_Core_Types.cpp  Test_Messaging_Payload.cpp
